# Curso_fast_api

./: .coverage  README.md  pyproject.toml
curso_fast_api/: app.py  settings.py
curso_fast_api/Models/: models.py
curso_fast_api/Schemas/: schemas.py
migrations/: env.py
migrations/versions/: b61c15025f98_create_users_table.py  e0ff459b0c99_user_modifi.py  ed14dbfe947b_user_modifi_2.py
tests/: conftest.py  test_app.py  test_db.py
