[tool.poetry]
name = "curso-fast-api"
version = "0.1.0"
description = ""
authors = ["MuriloFH <murisocahenrique45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.8.0"

[tool.ruff]
line-length = 99
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = 'ruff check . & ruff check . --diff'
format = 'ruff check . --fix & ruff format .'
run = 'fastapi dev curso_fast_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=curso_fast_api -vv'
post_test = 'coverage html'